WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
88328
Fix border-image-slice failures on
http://css3test.com
.
https://bugs.webkit.org/show_bug.cgi?id=88328
Summary
Fix border-image-slice failures on http://css3test.com.
Alexis Menard (darktears)
Reported
2012-06-05 05:54:57 PDT
Fix border-image-slice failures on
http://css3test.com
.
Attachments
Patch
(11.38 KB, patch)
2012-06-05 06:03 PDT
,
Alexis Menard (darktears)
no flags
Details
Formatted Diff
Diff
Patch for landing
(9.27 KB, patch)
2012-06-06 12:49 PDT
,
Alexis Menard (darktears)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alexis Menard (darktears)
Comment 1
2012-06-05 06:03:42 PDT
Created
attachment 145775
[details]
Patch
Tony Chang
Comment 2
2012-06-05 10:29:55 PDT
Comment on
attachment 145775
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=145775&action=review
> LayoutTests/fast/css/getComputedStyle/getComputedStyle-border-image-slice.html:22 > +var testValues = [ "10", "30%", "10 10", "10 30%", "30% 30%", "10 10 10", "30% 10 10", "10 30% 10", "30% 30% 30% 10", "10 10 10 10", "30% 30% 30% 10", "30% 30% 30% 30%", "fill 30%", "fill 10", "fill 2 4 8% 16%", > + "30% fill", "10 fill", "2 4 8% 16% fill", "10 fill 10", "solid", "fill fill" ];
Nit: weird indent
> LayoutTests/fast/css/getComputedStyle/getComputedStyle-border-image-slice.html:25 > +var expectedValues = [ "'10'", "'30%'", "'10'", "'10 30%'", "'30%'", "'10'", "'30% 10 10'", "'10 30%'", "'30% 30% 30% 10'", "'10'", "'30% 30% 30% 10'", "'30%'", "'30% fill'", "'10 fill'", "'2 4 8% 16% fill'", > + "'30% fill'", "'10 fill'", "'2 4 8% 16% fill'", "'100%'", "'100%'", "'100%'" ];
Nit: weird indent
> LayoutTests/fast/css/getComputedStyle/getComputedStyle-border-image-slice.html:28 > +e.style.borderImageSlice = "";
Nit: bad indent
> LayoutTests/fast/css/getComputedStyle/getComputedStyle-border-image-slice.html:31 > + shouldBe("computedStyle.getPropertyCSSValue('border-image-slice').toString()", "'[object CSSValue]'");
Nit: Is it useful to verify that it's a CSSValue? This seems redundant to getting cssText.
Alexis Menard (darktears)
Comment 3
2012-06-06 12:49:42 PDT
Created
attachment 146087
[details]
Patch for landing
WebKit Review Bot
Comment 4
2012-06-06 19:22:34 PDT
Comment on
attachment 146087
[details]
Patch for landing Clearing flags on attachment: 146087 Committed
r119663
: <
http://trac.webkit.org/changeset/119663
>
WebKit Review Bot
Comment 5
2012-06-06 19:22:42 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug